@@ -21,9 +21,11 @@ public interface PostMapper {
     })
     Post fromPostDto(PostDTO.Save dto, List<String> fileUrls, User user);
 
-//    @Mapping(target = "id", source = "postId")
-//    @Mapping(target = "user", source = "user")
-//    Post update(Long postId, PostDTO.Update dto, User user);
+    @Mappings({
+            @Mapping(target = "name", source = "user.name"),
+            @Mapping(target = "time", source = "modifiedAt")
+    })
+    PostDTO.ResponseAll toAll(Post post);
 
     @Mappings({
             @Mapping(target = "name", source = "user.name"),
@@ -41,7 +43,7 @@ public interface PostMapper {
         return comments.stream()
                 .filter(comment -> comment.getParent() == null) // 부모 댓글만 필터링
                 .map(this::mapCommentWithChildren) // 자식 댓글 포함하여 매핑
-                .collect(Collectors.toList());
+                .toList();
     }
 
     default CommentDTO.Response mapCommentWithChildren(Comment comment) {
@@ -65,9 +67,5 @@ public interface PostMapper {
 
         return response.build();
     }
-
-    @Mapping(target = "name", source = "user.name")
-    @Mapping(target = "time", source = "modifiedAt")
-    CommentDTO.Response mapComment(Comment comment);
 
 }
